--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,13 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+      - assets/image/
+
+  fonts:
+    - family: Jost
+      fonts:
+        - asset: assets/font/Jost-Regular.ttf
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
