--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  shared_preferences: ^2.0.18
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
