--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.2.5
   get: ^4.6.5
+  provider: ^6.0.5
+  geolocator: ^9.0.2
+  http: ^0.13.5
+
 
 dev_dependencies:
   flutter_test:
