--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.5
   shared_preferences: ^2.0.18
   flutter_slidable: ^2.0.0
+  flutter_svg: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,8 @@ dev_dependencies:
 flutter:
   assets:
       - assets/image/
+      - assets/image/in-mall-parking.svg
+      
 
   fonts:
     - family: Jost
