--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.0.5
   geolocator: ^9.0.2
   http: ^0.13.5
+  google_maps_webservice: ^0.0.19
+
 
 
 dev_dependencies:
